--- a/src/main/resources/dsa/swapnodeskotlin/swapnodeskotlin/MainUI.fxml
+++ b/src/main/resources/dsa/swapnodeskotlin/swapnodeskotlin/MainUI.fxml
@@ -1,16 +1,153 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="dsa.swapnodeskotlin.swapnodeskotlin.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@image/Design.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dsa.swapnodeskotlin.swapnodeskotlin.ControllerMain">
+   <children>
+      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="MainBackground" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Label layoutX="14.0" layoutY="14.0" styleClass="Label" text="Swap Nodes">
+               <font>
+                  <Font name="Arial Bold" size="20.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="2.0" left="10.0" right="10.0" top="2.0" />
+               </padding>
+            </Label>
+            <Label layoutX="166.0" layoutY="16.0" text="Group 4" textFill="#d95f59">
+               <font>
+                  <Font name="Arial Bold" size="20.0" />
+               </font>
+            </Label>
+            <Pane fx:id="CloseButton" layoutX="556.0" layoutY="13.0" prefHeight="30.0" prefWidth="30.0">
+               <children>
+                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/close.png" />
+                     </image>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Label alignment="CENTER" layoutX="14.0" layoutY="56.0" prefHeight="21.0" prefWidth="119.0" styleClass="Label" text="Load a File" textFill="#d95f59">
+               <font>
+                  <Font name="Arial Bold" size="18.0" />
+               </font>
+            </Label>
+            <HBox layoutX="14.0" layoutY="84.0" prefHeight="30.0" prefWidth="200.0">
+               <children>
+                  <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/txt.png" />
+                     </image>
+                     <HBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </HBox.margin>
+                  </ImageView>
+                  <Pane fx:id="OpenFileButton" prefHeight="35.0" prefWidth="155.0" styleClass="Label">
+                     <children>
+                        <Label layoutX="32.0" layoutY="6.0" styleClass="OpenFile" text="Open File">
+                           <font>
+                              <Font name="Arial Bold" size="20.0" />
+                           </font>
+                        </Label>
+                     </children>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Pane>
+               </children>
+            </HBox>
+            <Label alignment="CENTER" layoutX="14.0" layoutY="142.0" prefHeight="21.0" prefWidth="102.0" styleClass="Label" text="File Name:" textFill="#d95f59">
+               <font>
+                  <Font name="Arial Bold" size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="FileNameLabel" layoutX="14.0" layoutY="170.0" prefHeight="21.0" prefWidth="200.0" text="None..." textFill="#d95f59">
+               <font>
+                  <Font name="Arial Bold" size="15.0" />
+               </font>
+            </Label>
+            <Pane layoutX="16.0" layoutY="196.0" prefHeight="193.0" prefWidth="200.0" styleClass="AlgorithmBackground">
+               <children>
+                  <Label fx:id="FileNameLabel1" layoutX="7.0" layoutY="7.0" prefHeight="21.0" prefWidth="137.0" text="Different Algorithm" textFill="#522258">
+                     <font>
+                        <Font name="Arial Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <RadioButton fx:id="RadioAlgorithm1" layoutX="7.0" layoutY="33.0" mnemonicParsing="false" styleClass="custom-radio-button" text="Algorithm 1" textFill="#522258">
+                     <font>
+                        <Font name="Arial Bold" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </RadioButton>
+                  <RadioButton fx:id="RadioAlgorithm2" layoutX="7.0" layoutY="55.0" mnemonicParsing="false" styleClass="custom-radio-button" text="Algorithm 2" textFill="#522258">
+                     <font>
+                        <Font name="Arial Bold" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </RadioButton>
+                  <RadioButton fx:id="RadioAlgorithm3" layoutX="7.0" layoutY="77.0" mnemonicParsing="false" styleClass="custom-radio-button" text="Algorithm 3" textFill="#522258">
+                     <font>
+                        <Font name="Arial Bold" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </RadioButton>
+                  <RadioButton fx:id="RadioAlgorithm4" layoutX="7.0" layoutY="99.0" mnemonicParsing="false" styleClass="custom-radio-button" text="Algorithm 4" textFill="#522258">
+                     <font>
+                        <Font name="Arial Bold" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </RadioButton>
+                  <RadioButton fx:id="RadioAlgorithm5" layoutX="7.0" layoutY="121.0" mnemonicParsing="false" styleClass="custom-radio-button" text="Algorithm 5" textFill="#522258">
+                     <font>
+                        <Font name="Arial Bold" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </RadioButton>
+                  <RadioButton fx:id="RadioAlgorithm6" layoutX="7.0" layoutY="143.0" mnemonicParsing="false" styleClass="custom-radio-button" text="Algorithm 6" textFill="#522258">
+                     <font>
+                        <Font name="Arial Bold" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </RadioButton>
+                  <RadioButton fx:id="RadioAlgorithm7" layoutX="7.0" layoutY="165.0" mnemonicParsing="false" styleClass="custom-radio-button" text="Algorithm 7" textFill="#522258">
+                     <font>
+                        <Font name="Arial Bold" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </RadioButton>
+               </children>
+            </Pane>
+         </children>
+      </Pane>
+   </children>
+</AnchorPane>
