--- a/src/main/resources/dsa/swapnodeskotlin/swapnodeskotlin/image/Design.css
+++ b/src/main/resources/dsa/swapnodeskotlin/swapnodeskotlin/image/Design.css
@@ -54,3 +54,8 @@
     -fx-background-color: transparent;
     -fx-text-fill: #522258;
 }
+
+ .TFColorTheme{
+     -fx-text-fill: #D95F59;
+     -fx-background-color: #522258;
+ }
