--- a/src/main/resources/dsa/swapnodeskotlin/swapnodeskotlin/image/Design.css
+++ b/src/main/resources/dsa/swapnodeskotlin/swapnodeskotlin/image/Design.css
@@ -59,3 +59,8 @@
      -fx-text-fill: #D95F59;
      -fx-background-color: #522258;
  }
+
+ .ManualInputTextArea{
+     -fx-text-fill: #000;
+     -fx-background-color: #D95F59;
+ }
